Next version of web file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>hellp Coursera</title>
   </head>
   <body>
-    <h1>Hello Coursera Angular!!</h1>
+    <h1>Hello Coursera Angular!! I am happy!</h1>
   </body>
 </html>
